# research-template

./: README.md  example.def  my_env.def  pyproject.toml  pyproject_jax.txt
configurations/cluster/: base_slurm.yaml  nu_quest.yaml
docker/: example.Dockerfile
scripts/: README.md  init_venv.sh
