[project]
name = "research-template"

version = "0.1.0"
description = "A Flexible research template adapted from Boyuan Chen's research template
 for experiments and uses uv for reproducibility"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [torch,
torchvision,
wandb,
hydra-core,
pyyaml,
omegaconf,
colorama,
tqdm,
opencv-python,
matplotlib,
lightning,
click,
moviepy,
imageio,
einops,
wandb-osh]

# Optional dependency args, use for things like --no-build-isolation
[project.optional.dependencies]
[tool.uv]
[tool.uv.extra-build-dependencies]
[tool.uv.extra-build-variables]